ejemplos de ejecucion

--- a/analisis.ipynb
+++ b/analisis.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -429,6 +429,51 @@
    "metadata": {},
    "source": [
     "#### Se ve que el tiempo del algoritmo es independiente de la variabilidad de Si y Ai"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Ejemplos de ejecucion"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 elems\n",
+      "Input: [(3, 3), (5, 1), (1, 8)]\n",
+      "Output: ([(1, 8), (3, 3), (5, 1)], 10)\n",
+      "\n",
+      "10 elems\n",
+      "Input: [(1, 3), (5, 1), (4, 8), (4, 3), (1, 5), (2, 9), (2, 2), (2, 4), (1, 6), (6, 5)]\n",
+      "Output: ([(2, 9), (4, 8), (1, 6), (1, 5), (6, 5), (2, 4), (1, 3), (4, 3), (2, 2), (5, 1)], 29)\n",
+      "\n",
+      "Contraejemplo a ordenamiento por s_i\n",
+      "Input: [(10, 20), (40, 10)]\n",
+      "Output: ([(10, 20), (40, 10)], 60)\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 3 elems\n",
+    "elems = [(3, 3), (5, 1), (1, 8)]\n",
+    "print(f'3 elems\\nInput: {elems}\\nOutput: {obtener_orden_y_tiempo_optimo_de_videos(elems)}\\n')\n",
+    "\n",
+    "# 10 elems\n",
+    "elems = [(1, 3), (5, 1), (4, 8), (4, 3), (1, 5), (2, 9), (2, 2), (2, 4), (1, 6), (6, 5)]\n",
+    "print(f'10 elems\\nInput: {elems}\\nOutput: {obtener_orden_y_tiempo_optimo_de_videos(elems)}\\n')\n",
+    "\n",
+    "# Contraejemplo a ordenamiento por s_i\n",
+    "elems = [(10, 20), (40,10)]\n",
+    "print(f'Contraejemplo a ordenamiento por s_i\\nInput: {elems}\\nOutput: {obtener_orden_y_tiempo_optimo_de_videos(elems)}\\n')"
    ]
   }
  ],
